# django-model-agent

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: test.yml
django-model-agent-git/src/django_model_agent/: __init__.py
django-model-agent-git/src/django_model_agent/model_agent/: README.md  __init__.py  base.py  examples.py  memory.py  tests.py
src/django_model_agent/: README.md  __init__.py  base.py  examples.py  memory.py  tests.py  tools.py
tests/: __init__.py  conftest.py  models.py  settings.py  test_model_agent.py  test_original.py
