[project]
name = "django-model-agent-git"
version = "2026.1.1"
description = "A Django Ninja-style abstraction for binding Django models to Pydantic AI Agents"
readme = "README.md"
authors = [
    { name = "Jeff Triplett" },
]
license = "PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.13"
dependencies = [
    "django>=4.2",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
